--- a/territorialserver/build.gradle
+++ b/territorialserver/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.1.0'
 	id 'io.spring.dependency-management' version '1.1.0'
+	id 'org.siouan.frontend-jdk11' version '6.0.0'
 }
 
 group = 'com.scottbraaten'
